menambahkan apa yang ada

--- a/homepage/indext.html
+++ b/homepage/indext.html
@@ -18,14 +18,13 @@
     <nav class="navbar navbar-expand-lg shadow fixed-top">
       <div class="container">
         <img src="../assets/logo_web/logo_nama.png" alt="logo" class="navbar-brand" width="107.06" height="45" />
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../homepage/homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#news">News</a>
@@ -97,66 +96,74 @@
       <h3 class="my-4">All Games.</h3>
       <div class="row">
         <div class="col-md-2 col-6 mb-4 game-item" id="game-mlbb">
-          <a href="../form_topup/form_topup.html"><img src="../assets/icon_game/mlbb.jpg" class="img-fluid rounded" alt="Mobile Legends" /></a>
+          <a href="../form_topup/form_topupml.html"><img src="../assets/icon_game/mlbb.jpg" class="img-fluid rounded" alt="Mobile Legends" /></a>
           <p class="game-title text-center">Mobile Legends</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-aov">
-          <a href="#"><img src="../assets/icon_game/aov.jpg" class="img-fluid rounded" alt="Arena of Valor" /></a>
+          <a href="../form_topup/form_topupaov.html"><img src="../assets/icon_game/aov.jpg" class="img-fluid rounded" alt="Arena of Valor" /></a>
           <p class="game-title text-center">Arena of Valor</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-apex">
-          <a href="#"><img src="../assets/icon_game/apexlegend.png" class="img-fluid rounded" alt="Apex Legends" /></a>
+          <a href="../form_topup/form_topupapex.html"><img src="../assets/icon_game/apexlegend.png" class="img-fluid rounded" alt="Apex Legends" /></a>
           <p class="game-title text-center">Apex Legends</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-codm">
-          <a href="#"><img src="../assets/icon_game/codm.jpg" class="img-fluid rounded" alt="Call of Duty Mobile" /></a>
+          <a href="../form_topup/form_topupcodm.html"><img src="../assets/icon_game/codm.jpg" class="img-fluid rounded" alt="Call of Duty Mobile" /></a>
           <p class="game-title text-center">Call of Duty Mobile</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-ff">
-          <a href="#"><img src="../assets/icon_game/ff.png" class="img-fluid rounded" alt="Free Fire" /></a>
+          <a href="../form_topup/form_topupff.html"><img src="../assets/icon_game/ff.png" class="img-fluid rounded" alt="Free Fire" /></a>
           <p class="game-title text-center">Free Fire</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-genshin">
-          <a href="#"><img src="../assets/icon_game/genshin.jpg" class="img-fluid rounded" alt="Genshin Impact" /></a>
+          <a href="../form_topup/form_topupgenshin.html"><img src="../assets/icon_game/genshin.jpg" class="img-fluid rounded" alt="Genshin Impact" /></a>
           <p class="game-title text-center">Genshin Impact</p>
+        </div>
+        <div class="col-md-2 col-6 mb-4 game-item" id="game-valorant">
+          <a href="../form_topup/form_topupvalorant.html"><img src="../assets/icon_game/valorant.jpeg" class="img-fluid rounded" alt="Valorant" /></a>
+          <p class="game-title text-center">Valorant</p>
         </div>
       </div>
     </div>
 
     <!--Mobile Games-->
     <div class="container">
-      <h3 class="my-4">Mobile Games.</h3>
+      <h3 class="my-4">For Mobile Games.</h3>
       <div class="row">
         <div class="col-md-2 col-6 mb-4 game-item" id="game-mlbb">
-          <a href="#"><img src="../assets/icon_game/mlbb.jpg" class="img-fluid rounded" alt="Mobile Legends" /></a>
+          <a href="../form_topup/form_topupml.html"><img src="../assets/icon_game/mlbb.jpg" class="img-fluid rounded" alt="Mobile Legends" /></a>
           <p class="game-title text-center">Mobile Legends</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-aov">
-          <a href="#"><img src="../assets/icon_game/aov.jpg" class="img-fluid rounded" alt="Arena of Valor" /></a>
+          <a href="../form_topup/form_topupaov.html"><img src="../assets/icon_game/aov.jpg" class="img-fluid rounded" alt="Arena of Valor" /></a>
           <p class="game-title text-center">Arena of Valor</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-codm">
-          <a href="#"><img src="../assets/icon_game/codm.jpg" class="img-fluid rounded" alt="Call of Duty Mobile" /></a>
+          <a href="../form_topup/form_topupcodm.html"><img src="../assets/icon_game/codm.jpg" class="img-fluid rounded" alt="Call of Duty Mobile" /></a>
           <p class="game-title text-center">Call of Duty Mobile</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-ff">
-          <a href="#"><img src="../assets/icon_game/ff.png" class="img-fluid rounded" alt="Free Fire" /></a>
+          <a href="../form_topup/form_topupff.html"><img src="../assets/icon_game/ff.png" class="img-fluid rounded" alt="Free Fire" /></a>
           <p class="game-title text-center">Free Fire</p>
         </div>
         <div class="col-md-2 col-6 mb-4 game-item" id="game-genshin">
-          <a href="#"><img src="../assets/icon_game/genshin.jpg" class="img-fluid rounded" alt="Genshin Impact" /></a>
+          <a href="../form_topup/form_topupgenshin.html"><img src="../assets/icon_game/genshin.jpg" class="img-fluid rounded" alt="Genshin Impact" /></a>
           <p class="game-title text-center">Genshin Impact</p>
+        </div>
+        <div class="col-md-2 col-6 mb-4 game-item" id="game-apex">
+          <a href="../form_topup/form_topupapex.html"><img src="../assets/icon_game/apexlegend.png" class="img-fluid rounded" alt="Apex Legends" /></a>
+          <p class="game-title text-center">Apex Legends</p>
         </div>
       </div>
     </div>
 
     <!--PC Games-->
     <div class="container">
-      <h3 class="my-4">Pc Games.</h3>
+      <h3 class="my-4">For PC Games.</h3>
       <div class="row">
-        <div class="col-md-2 col-6 mb-4 game-item" id="game-apex">
-          <a href="#"><img src="../assets/icon_game/apexlegend.png" class="img-fluid rounded" alt="Apex Legends" /></a>
-          <p class="game-title text-center">Apex Legends</p>
+        <div class="col-md-2 col-6 mb-4 game-item" id="game-valorant">
+          <a href="../form_topup/form_topupvalorant.html"><img src="../assets/icon_game/valorant.jpeg" class="img-fluid rounded" alt="Valorant" /></a>
+          <p class="game-title text-center">Valorant</p>
         </div>
       </div>
     </div>
@@ -169,38 +176,46 @@
       <!-- Row for the cards -->
       <div class="row mb-3">
         <!-- Card 1 -->
+        <!-- Card 1 -->
         <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card news-card h-100">
-            <img src="../assets/honkai x honkai.jpg" class="card-img-top" alt="HONKAI X HONKAI" />
-            <div class="card-body">
-              <h5 class="card-title">HONKAI STAR RAIL COLLABORATION WITH HONKAI IMPACT</h5>
+          <a href="../news/full-news.html?news=1" class="text-decoration-none">
+            <div class="card news-card h-100">
+              <img src="../assets/news/honkai x honkai.jpg" class="card-img-top" alt="HONKAI X HONKAI" />
+              <div class="card-body">
+                <h5 class="card-title">HONKAI STAR RAIL COLLABORATION WITH HONKAI IMPACT</h5>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
 
         <!-- Card 2 -->
         <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card news-card h-100">
-            <img src="../assets/ff x blu luk.jpeg" class="card-img-top" alt="FF X bluluk" />
-            <div class="card-body">
-              <h5 class="card-title">Kolaborasi Free Fire x Blue Lock? Wow!!</h5>
+          <a href="../news/full-news.html?news=2" class="text-decoration-none">
+            <div class="card news-card h-100">
+              <img src="../assets/news/ff x blu luk.jpeg" class="card-img-top" alt="FF X Blue Lock" />
+              <div class="card-body">
+                <h5 class="card-title">Kolaborasi Free Fire x Blue Lock? Wow!!</h5>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
 
         <!-- Card 3 -->
         <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card news-card h-100">
-            <img src="../assets/rrq.jpg" class="card-img-top" alt="TOF x Evangelion" />
-            <div class="card-body">
-              <h5 class="card-title">Tanpa Kesulitan, RRQ Hoshi Berhasil Raih Kemenangan Pertama di M6</h5>
+          <a href="../news/full-news.html?news=3" class="text-decoration-none">
+            <div class="card news-card h-100">
+              <img src="../assets/news/rrq.jpg" class="card-img-top" alt="RRQ Hoshi" />
+              <div class="card-body">
+                <h5 class="card-title">Tanpa Kesulitan, RRQ Hoshi Berhasil Raih Kemenangan Pertama di M6</h5>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <a href="../news/news.html" class="btn btn-info border-dark">Lihat lebih lengkap disini</a>
       </div>
+      <a href="../news/news.html" type="button" class="btn btn-info border-dark">Lihat lebih lengkap disini</a>
+    </div>
 
-    <!-- Footer -->
+    <!--Footer-->
     <footer class="footer">
       <div class="footer-container">
         <p class="description">Tempat top up game termurah, tercepat, dan terpercaya di Indonesia. Dengan proses otomatis 24 Jam dan berbagai macam fitur pembayaran.</p>
@@ -215,6 +230,7 @@
           <a href="#" class="social-link"><i class="bi bi-facebook"></i></a>
           <a href="#" class="social-link"><i class="bi bi-youtube"></i></a>
         </div>
+        <!-- Copyright -->
         <p class="mb-0">&copy; 2024 Tempat Top Up Game. All rights reserved.</p>
       </div>
     </footer>
