--- a/calcu_mw/calculatormw.html
+++ b/calcu_mw/calculatormw.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../homepage/homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../homepage/indext.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../homepage/homepage.html#news">News</a>
