--- a/form_topup/form_topupaov.html
+++ b/form_topup/form_topupaov.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zero2Hero | Tempat Top Up Game Aman, Murah dan Cepat.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styleft.css" />
+    <link rel="stylesheet" href="styleft1.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
@@ -36,11 +36,29 @@
     </nav>
 
     <!-- Banner -->
-    <img style="width: 100%; height: auto" src="../assets/ftopup/banner_ml.jpg" alt="Banner" />
+    <img style="width: 100%; height: auto; padding: 60px 0px 0px 0px" src="../assets/ftopup/banner_ml.jpg" alt="Banner" />
 
     <!-- Form Section -->
     <section class="container py-5">
-      <h2 class="text-center mb-4">Top Up Mobile Legend</h2>
+      <!--profil game-->
+      <div
+        style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; padding: 20px; max-width: 100%; box-sizing: border-box; background: linear-gradient(to right, #ffffff, #08caef); border-radius: 25px; border: 3px solid #08caef"
+      >
+        <div style="flex-shrink: 0; width: 100%; max-width: 296px; position: relative; display: flex; justify-content: center; align-items: center; background: #08caef; border-radius: 25px; overflow: hidden">
+          <img style="width: 90%; height: auto; border-radius: 22.89px" src="../assets/icon_game/aov.jpg" alt="Aov Logo" />
+        </div>
+        <div style="flex-grow: 1; min-width: 300px; display: flex; flex-direction: column; align-items: flex-start; justify-content: center; gap: 20px">
+          <div id="nama-game" style="color: #0b0c3a; font-size: 1.8rem; font-family: Poppins, sans-serif; font-weight: 600; word-wrap: break-word">ARENA OF VALOR</div>
+          <div style="color: #0b0c3a; font-size: 1.4rem; font-family: Poppins, sans-serif; font-weight: 600; word-wrap: break-word">Garena</div>
+          <div style="display: flex; gap: 20px; flex-wrap: wrap">
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Proses cepat</div>
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Layanan 24 jam</div>
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Aman</div>
+          </div>
+        </div>
+      </div>
+
+      <!--form top up-->
       <form id="topupForm">
         <!-- Account Information -->
         <div class="mb-3">
@@ -54,8 +72,16 @@
           <label for="nominal" class="form-label">Pilih Nominal</label>
           <select class="form-select" id="nominal" required>
             <option value="" selected>Pilih Nominal</option>
-            <option value="weekly,25000">Weekly Diamond Pass (Rp 25,000)</option>
-            <option value="instant,50000">Top Up Instant (Rp 50,000)</option>
+            <option value="voucher,8873">40 Vouchers (Rp 8,873)</option>
+            <option value="voucher,17745">90 Vouchers (Rp 17,745)</option>
+            <option value="voucher,44363">230 Vouchers (Rp 44,363)</option>
+            <option value="voucher,88725">470 Vouchers (Rp 88,725)</option>
+            <option value="voucher,177450">950 Vouchers (Rp 177,450)</option>
+            <option value="voucher,266175">1430 Vouchers (Rp 266,175)</option>
+            <option value="voucher,443625">2390 Vouchers (Rp 443,625)</option>
+            <option value="voucher,887250">4800 Vouchers (Rp 887,250)</option>
+            <option value="voucher,4436250">24050 Vouchers (Rp 4,436,250)</option>
+            <option value="voucher,8872500">48200 Vouchers (Rp 8,872,500)</option>
           </select>
         </div>
 
