--- a/form_topup/form_topupgenshin.html
+++ b/form_topup/form_topupgenshin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zero2Hero | Tempat Top Up Game Aman, Murah dan Cepat.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styleft.css" />
+    <link rel="stylesheet" href="styleft1.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
@@ -36,11 +36,29 @@
     </nav>
 
     <!-- Banner -->
-    <img style="width: 100%; height: auto" src="../assets/ftopup/banner_ml.jpg" alt="Banner" />
+    <img style="width: 100%; height: auto; padding: 60px 0px 0px 0px" src="../assets/ftopup/banner_ml.jpg" alt="Banner" />
 
     <!-- Form Section -->
     <section class="container py-5">
-      <h2 class="text-center mb-4">Top Up Mobile Legend</h2>
+      <!--profil game-->
+      <div
+        style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; padding: 20px; max-width: 100%; box-sizing: border-box; background: linear-gradient(to right, #ffffff, #08caef); border-radius: 25px; border: 3px solid #08caef"
+      >
+        <div style="flex-shrink: 0; width: 100%; max-width: 296px; position: relative; display: flex; justify-content: center; align-items: center; background: #08caef; border-radius: 25px; overflow: hidden">
+          <img style="width: 90%; height: auto; border-radius: 22.89px" src="../assets/icon_game/genshin.jpg" alt="Mobile Legends Logo" />
+        </div>
+        <div style="flex-grow: 1; min-width: 300px; display: flex; flex-direction: column; align-items: flex-start; justify-content: center; gap: 20px">
+          <div id="nama-game" style="color: #0b0c3a; font-size: 1.8rem; font-family: Poppins, sans-serif; font-weight: 600; word-wrap: break-word">GENSHIN IMPACT</div>
+          <div style="color: #0b0c3a; font-size: 1.4rem; font-family: Poppins, sans-serif; font-weight: 600; word-wrap: break-word">HoYoverse</div>
+          <div style="display: flex; gap: 20px; flex-wrap: wrap">
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Proses cepat</div>
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Layanan 24 jam</div>
+            <div style="color: #0b0c3a; font-size: 1rem; font-family: Poppins, sans-serif; font-weight: 400; word-wrap: break-word">Aman</div>
+          </div>
+        </div>
+      </div>
+
+      <!--form top up-->
       <form id="topupForm">
         <!-- Account Information -->
         <div class="mb-3">
@@ -54,8 +72,17 @@
           <label for="nominal" class="form-label">Pilih Nominal</label>
           <select class="form-select" id="nominal" required>
             <option value="" selected>Pilih Nominal</option>
-            <option value="weekly,25000">Weekly Diamond Pass (Rp 25,000)</option>
-            <option value="instant,50000">Top Up Instant (Rp 50,000)</option>
+            <option value="Blessing of the Welkin Moon,58417">Blessing of the Welkin Moon (Rp 58,417)</option>
+            <option value="2x Blessing of the Welkin Moon,116834">2x Blessing of the Welkin Moon (Rp 116,834)</option>
+            <option value="3x Blessing of the Welkin Moon,175251">3x Blessing of the Welkin Moon (Rp 175,251)</option>
+            <option value="4x Blessing of the Welkin Moon,233668">4x Blessing of the Welkin Moon (Rp 233,668)</option>
+            <option value="5x Blessing of the Welkin Moon,292085">5x Blessing of the Welkin Moon (Rp 292,085)</option>
+            <option value="60 GC,11443">60 GC (Rp 11,443)</option>
+            <option value="330 (300+30) GC,58417">330 (300+30) GC (Rp 58,417)</option>
+            <option value="1090 (980+110) GC,175852">1090 (980+110) GC (Rp 175,852)</option>
+            <option value="2240 (1980+260) GC,381364">2240 (1980+260) GC (Rp 381,364)</option>
+            <option value="3880 (3280+600) GC,586875">3880 (3280+600) GC (Rp 586,875)</option>
+            <option value="8080 (6480+1600) GC,1174051">8080 (6480+1600) GC (Rp 1,174,051)</option>
           </select>
         </div>
 
