--- a/form_topup/form_topupvalorant.html
+++ b/form_topup/form_topupvalorant.html
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="../homepage/indext.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="../homepage/indext.html#news">News</a></li>
+            <li class="nav-item"><a class="nav-link" href="../homepage/index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="../homepage/index.html#news">News</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Calculator</a>
